Changes for 1.2.0

- Refactor ObjectManager into multiple components
- Added ServiceStore class template to manage storage and retrieval of objects
- Refactor dependency traits
- Added static asserts for dependency types during registration
- Added unit tests

Changes for 1.1.0:

- CMake file update

Changes for 1.0.0:

- Registration of object constructors and global functions
- Typesafe management of registered instances (using a type map)
- Support for XML-based dependency injection
- Support injection by unique_ptr (with ownership transfer) and by value, reference or pointer (no ownership transfer)